<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.constraint.ConstraintLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/title_blank"
        android:id="@+id/title_view"
        style="@style/DetailTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/release_date_view"
        style="@style/DetailInfo"
        tools:text="@string/release_date"
        app:layout_constraintTop_toTopOf="@+id/thumbnail_poster"
        app:layout_constraintLeft_toRightOf="@+id/thumbnail_poster"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/user_rating_view"
        style="@style/DetailInfo"
        tools:text="@string/user_rating"
        android:paddingTop="8dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/thumbnail_poster"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/release_date_view" />

    <ImageView
        android:id="@+id/thumbnail_poster"
        android:contentDescription="@string/a11y_poster_image"
        android:layout_width="96dp"
        android:layout_height="144dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title_view"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <ImageButton
        android:contentDescription="@string/a11y_add_favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/add_favorite_button"
        style="@style/AddFavoriteButton"
        app:srcCompat="@drawable/ic_53415"
        android:onClick="toggleFavorite"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/thumbnail_poster" />
</android.support.constraint.ConstraintLayout>
</layout>